# kickpact

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SUBMISSION.md  download.json  package.json  turbo.json
.github/workflows/: ci.yml  deploy-staging.yml
.serena/: project.yml
apps/contracts/: Move.toml  README.md  package.json  sui-codegen.config.ts
apps/dashboard/: next.config.ts  package.json
apps/desktop/: .gitignore  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js
apps/duel-evm/: .gitignore  deployed.json  foundry.toml
apps/landing/: package-lock.json  package.json
apps/miniapp/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/mobile/: AGENTS.md  App.tsx  app.json  bunfig.toml  eas.json  index.js  index.ts  metro.config.js  package.json  polyfill.js  tailwind.config.js  tsconfig.json
apps/pear/: README.md  app.js  chat-core.js  cli.js  index.html  package.json
apps/playground/: .env.example  README.md
apps/server/: .env.example  Dockerfile  README.md  openapi.json  test-preload.ts
apps/solana/: .gitignore  Anchor.toml  package.json
apps/solana/programs/kickpact/: Cargo.toml
apps/solana/programs/kickpact/src/: lib.rs
apps/web/: .env.example  .env.production  Dockerfile  (+4 more)
demo/: .gitignore  README.md  assemble.sh  narrate.py  narration.json  two-phone.sh
docs/: FEEDBACK.md  TECHNICAL.md  deepbook-oracle-architecture.md  dorahacks-answers.md  e2e-flow.md  oracle-selection.md  prd.md  submission-answers.md  zklogin-sponsored-gas-plan.md
tools/: make-icon.py
(+207 files in other folders)
